--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
+  <link href='https://unpkg.com/css.gg@2.0.0/icons/css/arrow-up.css' rel='stylesheet'>
+
   <link rel="icon" type="image/x-icon" href="image/shivsenaSymbol.png">
   <link rel="stylesheet" href="Css/slide.css">
   <link rel="stylesheet" href="Css/contact.css">
@@ -32,7 +34,7 @@
 <body>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-orange">
+    <nav class="navbar navbar-expand-lg navbar-light bg-orange" id="home">
       <div class="container">
 
           <a href="index.html" class="navbar-brand">
@@ -58,7 +60,7 @@
                           Media
                       </a>
                       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <a class="dropdown-item" href="#">Press Releases</a>
+                          <a class="dropdown-item" href="PressReleases.html">Press Releases</a>
                           <a class="dropdown-item" href="photogallery.html">Photo Gallery</a>
                           <a class="dropdown-item" href="media.html">Video Gallery</a>
                       </div>
@@ -77,7 +79,6 @@
       </div>
   </nav>
   <!-- Navbar End -->
-
   <!-- sidenav -->
   <div class="mysidenav" id="sidenav">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -93,7 +94,7 @@
               Media
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Press Releases</a>
+              <a class="dropdown-item" href="PressReleases.html">Press Releases</a>
               <a class="dropdown-item" href="photogallery.html">Photo Gallery</a>
               <a class="dropdown-item" href="media.html">Video Gallery</a>
           </div>
@@ -109,6 +110,10 @@
       </div>
   </div>
   <!-- sidenav end -->
+  <!-- Move to up button -->
+  <div class="scroll-button">
+      <a href="#home" style="display: block;"><i class="gg-arrow-up"></i></a>
+  </div>
 
   <!-- Contact Form -->
   <div class="container">
