--- a/donation.html
+++ b/donation.html
@@ -16,7 +16,7 @@
 <body>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-orange">
+    <nav class="navbar navbar-expand-lg navbar-light bg-orange" id="home">
       <div class="container">
 
           <a href="index.html" class="navbar-brand">
@@ -42,7 +42,7 @@
                           Media
                       </a>
                       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <a class="dropdown-item" href="#">Press Releases</a>
+                          <a class="dropdown-item" href="PressReleases.html">Press Releases</a>
                           <a class="dropdown-item" href="photogallery.html">Photo Gallery</a>
                           <a class="dropdown-item" href="media.html">Video Gallery</a>
                       </div>
@@ -61,7 +61,6 @@
       </div>
   </nav>
   <!-- Navbar End -->
-
   <!-- sidenav -->
   <div class="mysidenav" id="sidenav">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -77,7 +76,7 @@
               Media
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Press Releases</a>
+              <a class="dropdown-item" href="PressReleases.html">Press Releases</a>
               <a class="dropdown-item" href="photogallery.html">Photo Gallery</a>
               <a class="dropdown-item" href="media.html">Video Gallery</a>
           </div>
