--- a/donation.html
+++ b/donation.html
@@ -18,7 +18,6 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-orange" id="home">
       <div class="container">
-
           <a href="index.html" class="navbar-brand">
               <img src="image/shivShenaLogo.png" alt="logo" height="80" width="80">
               <span class="shivsena-text">शिवसेना India</span>
@@ -32,10 +31,18 @@
                   <li class="nav-item">
                       <a class="nav-link" href="index.html">Home</a>
                   </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="ourmp.html">Our M.Ps</a>
+                  <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                          data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          For Voter
+                      </a>
+                      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                          <a class="dropdown-item" href="">Vision</a>
+                          <a class="dropdown-item" href="">Projects</a>
+                          <a class="dropdown-item" href="">Schemes</a>
+                          <a class="dropdown-item" href="">Mission</a>
+                      </div>
                   </li>
-
                   <li class="nav-item dropdown">
                       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -47,14 +54,47 @@
                           <a class="dropdown-item" href="media.html">Video Gallery</a>
                       </div>
                   </li>
+                  <div class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                          data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          Party
+                      </a>
+                      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                          <a class="dropdown-item" href="">President</a>
+                          <a class="dropdown-item" href="ministers.html">Ministers</a>
+                          <li>
+                              <a class="dropdown-item" href="">Leadership &raquo;</a>
+                              <ul class="dropdown-menu dropdown-submenu">
+                                  <li><a class="dropdown-item" href="eknathshinde.html">Eknath Shinde Ji (C.M.)</a>
+                                  </li>
+                                  <li><a class="dropdown-item" href="rahulshewale.html">Rahul Shewale Ji</a></li>
+                                  <li><a class="dropdown-item" href="anandraoadsul.html">Anandrao Adsul Ji</a></li>
+                                  <li><a class="dropdown-item" href="">Udya Samant Ji</a></li>
+                                  <li><a class="dropdown-item" href="">Dipak Kesarkar Ji</a></li>
+                                  <li><a class="dropdown-item" href="drshrikant.html">Shrikant Shinde Ji</a></li>
+                                  <li><a class="dropdown-item" href="abhijit.html">Abhijit Adsul Ji</a></li>
+                                  <li><a class="dropdown-item" href="anshuman.html">Anshuman Joshi Ji</a></li>
+                              </ul>
+                          </li>
+                          <a class="dropdown-item" href="ourmp.html">MP</a>
+                          <a class="dropdown-item" href="mla.html">MLA</a>
+                          <li>
+                              <a class="dropdown-item" href="">About Shivsena &raquo;</a>
+                              <ul class="dropdown-menu dropdown-submenu">
+                                  <li><a class="dropdown-item" href="https://rb.gy/5glkd">History</a></li>
+                                  <li><a class="dropdown-item" href="ideology.html">Ideology</a></li>
+
+                          </li>
+                      </div>
+                  </div>
                   <li class="nav-item">
                       <a class="nav-link" href="contact.html">Contact us</a>
                   </li>
                   <li class="nav-item">
-                      <a class="btn btn-primary" href="form.html">Join Shivsena</a>
+                      <a class="btn" href="form.html">Join Shivsena</a>
                   </li>
                   <li class="nav-item">
-                      <a class="btn btn-primary" href="donation.html">Make a Donation</a>
+                      <a class="btn" href="donation.html">Make a Donation</a>
                   </li>
               </ul>
           </div>
@@ -67,8 +107,17 @@
       <div class="nav-item">
           <a class="nav-link" href="index.html">Home</a>
       </div>
-      <div class="nav-item">
-          <a class="nav-link" href="ourmp.html">Our M.Ps</a>
+      <div class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              For Voter
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="">Vision</a>
+              <a class="dropdown-item" href="">Projects</a>
+              <a class="dropdown-item" href="">Schemes</a>
+              <a class="dropdown-item" href="">Mission</a>
+          </div>
       </div>
       <div class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
@@ -81,14 +130,29 @@
               <a class="dropdown-item" href="media.html">Video Gallery</a>
           </div>
       </div>
+      <div class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              Party
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="">President</a>
+              <a class="dropdown-item" href="ministers.html">Ministers</a>
+              <a class="dropdown-item" href="ourmp.html">MP</a>
+              <a class="dropdown-item" href="mla.html">MLA</a>
+              <a class="dropdown-item" href="ideology.html">Ideology</a>
+              <a class="dropdown-item" href="https://rb.gy/5glkd">History</a>
+              <a class="dropdown-item" href="">About Shivsena</a>
+          </div>
+      </div>
       <div class="nav-item">
           <a class="nav-link" href="contact.html">Contact us</a>
       </div>
       <div class="nav-item">
-          <a class="margin btn-primary" href="form.html">Join Shivsena</a>
+          <a class="margin" href="form.html">Join Shivsena</a>
       </div>
       <div class="nav-item">
-          <a class="margin btn-primary" href="donation.html">Make a Donation</a>
+          <a class="margin" href="donation.html">Make a Donation</a>
       </div>
   </div>
   <!-- sidenav end -->
@@ -121,7 +185,7 @@
                 <option value="3">MLA</option>
               </select>
             </div>
-            <div class="button btn">
+            <div class="button">
               <script src="https://checkout.razorpay.com/v1/checkout.js" data-key="YOUR_KEY_ID" data-amount="29935"
                 data-currency="INR" data-order_id="order_CgmcjRh9ti2lP7" data-name="Acme Corp"
                 data-description="A Wild Sheep Chase is the third novel by Japanese author Haruki Murakami"
@@ -136,16 +200,9 @@
   <!-- Contact Form End -->
 
   <!-- Bootstrap JS -->
-  <script src="JavaScript/slide.js"></script>
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 
 </html>
