--- a/ministers.html
+++ b/ministers.html
@@ -20,7 +20,6 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-orange" id="home">
         <div class="container">
-
             <a href="index.html" class="navbar-brand">
                 <img src="image/shivShenaLogo.png" alt="logo" height="80" width="80">
                 <span class="shivsena-text">शिवसेना India</span>
@@ -34,10 +33,18 @@
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="ourmp.html">Our M.Ps</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            For Voter
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="">Vision</a>
+                            <a class="dropdown-item" href="">Projects</a>
+                            <a class="dropdown-item" href="">Schemes</a>
+                            <a class="dropdown-item" href="">Mission</a>
+                        </div>
                     </li>
-
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -49,14 +56,47 @@
                             <a class="dropdown-item" href="media.html">Video Gallery</a>
                         </div>
                     </li>
+                    <div class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Party
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="">President</a>
+                            <a class="dropdown-item" href="ministers.html">Ministers</a>
+                            <li>
+                                <a class="dropdown-item" href="">Leadership &raquo;</a>
+                                <ul class="dropdown-menu dropdown-submenu">
+                                    <li><a class="dropdown-item" href="eknathshinde.html">Eknath Shinde Ji (C.M.)</a>
+                                    </li>
+                                    <li><a class="dropdown-item" href="rahulshewale.html">Rahul Shewale Ji</a></li>
+                                    <li><a class="dropdown-item" href="anandraoadsul.html">Anandrao Adsul Ji</a></li>
+                                    <li><a class="dropdown-item" href="">Udya Samant Ji</a></li>
+                                    <li><a class="dropdown-item" href="">Dipak Kesarkar Ji</a></li>
+                                    <li><a class="dropdown-item" href="drshrikant.html">Shrikant Shinde Ji</a></li>
+                                    <li><a class="dropdown-item" href="abhijit.html">Abhijit Adsul Ji</a></li>
+                                    <li><a class="dropdown-item" href="anshuman.html">Anshuman Joshi Ji</a></li>
+                                </ul>
+                            </li>
+                            <a class="dropdown-item" href="ourmp.html">MP</a>
+                            <a class="dropdown-item" href="mla.html">MLA</a>
+                            <li>
+                                <a class="dropdown-item" href="">About Shivsena &raquo;</a>
+                                <ul class="dropdown-menu dropdown-submenu">
+                                    <li><a class="dropdown-item" href="https://rb.gy/5glkd">History</a></li>
+                                    <li><a class="dropdown-item" href="ideology.html">Ideology</a></li>
+
+                            </li>
+                        </div>
+                    </div>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="btn btn-primary" href="form.html">Join Shivsena</a>
+                        <a class="btn" href="form.html">Join Shivsena</a>
                     </li>
                     <li class="nav-item">
-                        <a class="btn btn-primary" href="donation.html">Make a Donation</a>
+                        <a class="btn" href="donation.html">Make a Donation</a>
                     </li>
                 </ul>
             </div>
@@ -69,8 +109,17 @@
         <div class="nav-item">
             <a class="nav-link" href="index.html">Home</a>
         </div>
-        <div class="nav-item">
-            <a class="nav-link" href="ourmp.html">Our M.Ps</a>
+        <div class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                For Voter
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="">Vision</a>
+                <a class="dropdown-item" href="">Projects</a>
+                <a class="dropdown-item" href="">Schemes</a>
+                <a class="dropdown-item" href="">Mission</a>
+            </div>
         </div>
         <div class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
@@ -83,14 +132,29 @@
                 <a class="dropdown-item" href="media.html">Video Gallery</a>
             </div>
         </div>
+        <div class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                Party
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="">President</a>
+                <a class="dropdown-item" href="ministers.html">Ministers</a>
+                <a class="dropdown-item" href="ourmp.html">MP</a>
+                <a class="dropdown-item" href="mla.html">MLA</a>
+                <a class="dropdown-item" href="ideology.html">Ideology</a>
+                <a class="dropdown-item" href="https://rb.gy/5glkd">History</a>
+                <a class="dropdown-item" href="">About Shivsena</a>
+            </div>
+        </div>
         <div class="nav-item">
             <a class="nav-link" href="contact.html">Contact us</a>
         </div>
         <div class="nav-item">
-            <a class="margin btn-primary" href="form.html">Join Shivsena</a>
+            <a class="margin" href="form.html">Join Shivsena</a>
         </div>
         <div class="nav-item">
-            <a class="margin btn-primary" href="donation.html">Make a Donation</a>
+            <a class="margin" href="donation.html">Make a Donation</a>
         </div>
     </div>
     <!-- sidenav end -->
@@ -133,7 +197,7 @@
                     <img src="image/gubalM.jpg" class="card-img-top" alt="gubalM">
                     <div class="card-body">
                         <h5 class="card-title">Gulab Raghunath Patil</h5>
-                        <h6>Member of the Legislative Assembly of Maharashtra</h6>
+                        <h6>Minister for Water Supply and Sanitation.</h6>
                         <a class="btn btn-primary" data-toggle="collapse" href="#collapse1" role="button"
                             aria-expanded="false" aria-controls="collapse1">
                             Read More
@@ -157,7 +221,7 @@
                     <img src="image/bhuseM.jpg" class="card-img-top" alt="bhuseM">
                     <div class="card-body">
                         <h5 class="card-title">Dadaji Dagadu Bhuse</h5>
-                        <h6>Member of the Legislative Assembly of Maharashtra</h6>
+                        <h6>Minister for Ports and Mining</h6>
                         <a class="btn btn-primary" data-toggle="collapse" href="#collapse2" role="button"
                             aria-expanded="false" aria-controls="collapse2">
                             Read More
@@ -182,7 +246,7 @@
                     <img src="image/dulichandM.jpg" class="card-img-top" alt="dulichandM">
                     <div class="card-body">
                         <h5 class="card-title">Sanjay Dulichand Rathod</h5>
-                        <h6>Member of the Legislative Assembly of Maharashtra</h6>
+                        <h6>Minister for Food and Drugs Administration.	</h6>
                         <a class="btn btn-primary" data-toggle="collapse" href="#collapse3" role="button"
                             aria-expanded="false" aria-controls="collapse3">
                             Read More
@@ -207,7 +271,7 @@
                     <img src="image/sandeepM.jpg" class="card-img-top" alt="sandeepM">
                     <div class="card-body">
                         <h5 class="card-title">Sandipanrao Bhumre</h5>
-                        <h6>Member of the Legislative Assembly of Maharashtra</h6>
+                        <h6>Minister for Employment Guarantee Scheme and Horticulture</h6>
                         <a class="btn btn-primary" data-toggle="collapse" href="#collapse4" role="button"
                             aria-expanded="false" aria-controls="collapse4">
                             Read More
@@ -231,7 +295,7 @@
                     <img src="image/udayM.jpg" class="card-img-top" alt="udayM">
                     <div class="card-body">
                         <h5 class="card-title">Uday Samant</h5>
-                        <h6>Minister of Industries of Maharashtra</h6>
+                        <h6>Minister for Industries</h6>
                         <a class="btn btn-primary" data-toggle="collapse" href="#collapse5" role="button"
                             aria-expanded="false" aria-controls="collapse5">
                             Read More
@@ -254,7 +318,7 @@
                     <img src="image/shawantM.jpg" class="card-img-top" alt="shawantM">
                     <div class="card-body">
                         <h5 class="card-title">Tanaji Sawant</h5>
-                        <h6>Minister of Water Conservation of Maharashtra</h6>
+                        <h6>Minister for Public Health and Family Welfare</h6>
                         <a class="btn btn-primary" data-toggle="collapse" href="#collapse6" role="button"
                             aria-expanded="false" aria-controls="collapse6">
                             Read More
@@ -276,7 +340,7 @@
                     <img src="image/abdulM.jpg" class="card-img-top" alt="abdulM">
                     <div class="card-body">
                         <h5 class="card-title">Abdul Sattar Abdul Nabi</h5>
-                        <h6>Minister of Agriculture</h6>
+                        <h6>Minister for Agriculture</h6>
                         <a class="btn btn-primary" data-toggle="collapse" href="#collapse7" role="button"
                             aria-expanded="false" aria-controls="collapse7">
                             Read More
@@ -300,7 +364,7 @@
                     <img src="image/deepakM.jpg" class="card-img-top" alt="deepakM">
                     <div class="card-body">
                         <h5 class="card-title">Deepak Vasant Kesarkar</h5>
-                        <h6>Ministr of Education</h6>
+                        <h6>Minister for School Education and Marathi Language</h6>
                         <a class="btn btn-primary" data-toggle="collapse" href="#collapse8" role="button"
                             aria-expanded="false" aria-controls="collapse8">
                             Read More
@@ -323,7 +387,7 @@
                     <img src="image/sambhuM.jpg" class="card-img-top" alt="sambhuM">
                     <div class="card-body">
                         <h5 class="card-title">Shambhuraj Shivajirao Desai</h5>
-                        <h6>Member of the Legislative Assembly of Maharashtra</h6>
+                        <h6>Minister for State Excise</h6>
                         <a class="btn btn-primary" data-toggle="collapse" href="#collapse9" role="button"
                             aria-expanded="false" aria-controls="collapse9">
                             Read More
