--- a/ourmp.html
+++ b/ourmp.html
@@ -11,6 +11,7 @@
     <link href='https://unpkg.com/css.gg@2.0.0/icons/css/arrow-up.css' rel='stylesheet'>
     <link rel="icon" type="image/x-icon" href="image/shivsenaSymbol.png">
     <link rel="stylesheet" href="Css/slide.css">
+    <link rel="stylesheet" href="Css/card.css">
 </head>
 
 <body>
@@ -18,7 +19,6 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-orange" id="home">
         <div class="container">
-
             <a href="index.html" class="navbar-brand">
                 <img src="image/shivShenaLogo.png" alt="logo" height="80" width="80">
                 <span class="shivsena-text">शिवसेना India</span>
@@ -32,10 +32,18 @@
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="ourmp.html">Our M.Ps</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            For Voter
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="">Vision</a>
+                            <a class="dropdown-item" href="">Projects</a>
+                            <a class="dropdown-item" href="">Schemes</a>
+                            <a class="dropdown-item" href="">Mission</a>
+                        </div>
                     </li>
-
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -47,14 +55,47 @@
                             <a class="dropdown-item" href="media.html">Video Gallery</a>
                         </div>
                     </li>
+                    <div class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Party
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="">President</a>
+                            <a class="dropdown-item" href="ministers.html">Ministers</a>
+                            <li>
+                                <a class="dropdown-item" href="">Leadership &raquo;</a>
+                                <ul class="dropdown-menu dropdown-submenu">
+                                    <li><a class="dropdown-item" href="eknathshinde.html">Eknath Shinde Ji (C.M.)</a>
+                                    </li>
+                                    <li><a class="dropdown-item" href="rahulshewale.html">Rahul Shewale Ji</a></li>
+                                    <li><a class="dropdown-item" href="anandraoadsul.html">Anandrao Adsul Ji</a></li>
+                                    <li><a class="dropdown-item" href="">Udya Samant Ji</a></li>
+                                    <li><a class="dropdown-item" href="">Dipak Kesarkar Ji</a></li>
+                                    <li><a class="dropdown-item" href="drshrikant.html">Shrikant Shinde Ji</a></li>
+                                    <li><a class="dropdown-item" href="abhijit.html">Abhijit Adsul Ji</a></li>
+                                    <li><a class="dropdown-item" href="anshuman.html">Anshuman Joshi Ji</a></li>
+                                </ul>
+                            </li>
+                            <a class="dropdown-item" href="ourmp.html">MP</a>
+                            <a class="dropdown-item" href="mla.html">MLA</a>
+                            <li>
+                                <a class="dropdown-item" href="">About Shivsena &raquo;</a>
+                                <ul class="dropdown-menu dropdown-submenu">
+                                    <li><a class="dropdown-item" href="https://rb.gy/5glkd">History</a></li>
+                                    <li><a class="dropdown-item" href="ideology.html">Ideology</a></li>
+
+                            </li>
+                        </div>
+                    </div>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="btn btn-primary" href="form.html">Join Shivsena</a>
+                        <a class="btn" href="form.html">Join Shivsena</a>
                     </li>
                     <li class="nav-item">
-                        <a class="btn btn-primary" href="donation.html">Make a Donation</a>
+                        <a class="btn" href="donation.html">Make a Donation</a>
                     </li>
                 </ul>
             </div>
@@ -67,8 +108,17 @@
         <div class="nav-item">
             <a class="nav-link" href="index.html">Home</a>
         </div>
-        <div class="nav-item">
-            <a class="nav-link" href="ourmp.html">Our M.Ps</a>
+        <div class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                For Voter
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="">Vision</a>
+                <a class="dropdown-item" href="">Projects</a>
+                <a class="dropdown-item" href="">Schemes</a>
+                <a class="dropdown-item" href="">Mission</a>
+            </div>
         </div>
         <div class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
@@ -81,14 +131,29 @@
                 <a class="dropdown-item" href="media.html">Video Gallery</a>
             </div>
         </div>
+        <div class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                Party
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="">President</a>
+                <a class="dropdown-item" href="ministers.html">Ministers</a>
+                <a class="dropdown-item" href="ourmp.html">MP</a>
+                <a class="dropdown-item" href="mla.html">MLA</a>
+                <a class="dropdown-item" href="ideology.html">Ideology</a>
+                <a class="dropdown-item" href="https://rb.gy/5glkd">History</a>
+                <a class="dropdown-item" href="">About Shivsena</a>
+            </div>
+        </div>
         <div class="nav-item">
             <a class="nav-link" href="contact.html">Contact us</a>
         </div>
         <div class="nav-item">
-            <a class="margin btn-primary" href="form.html">Join Shivsena</a>
+            <a class="margin" href="form.html">Join Shivsena</a>
         </div>
         <div class="nav-item">
-            <a class="margin btn-primary" href="donation.html">Make a Donation</a>
+            <a class="margin" href="donation.html">Make a Donation</a>
         </div>
     </div>
     <!-- sidenav end -->
@@ -97,19 +162,119 @@
         <a href="#home" style="display: block;"><i class="gg-arrow-up"></i></a>
     </div>
 
-    <!-- inprogress -->
-    <img class="" style="margin: auto; display: block;" src="image/Gif/inprogress.gif" alt="">
-    <!-- inprogress -->
+    <!-- Mp card -->
+    <h3 class="center">MP List</h3>
+    <div class="mp-class">
+        <div class="mp-container">
+
+            <div class="mp-card">
+                <img src="image/MP/img1.png" alt="">
+                <div class="mp-body">
+                    <h3>Hemant Patil</h3>
+                    <div class="seperator"></div>
+                    <p class="justify">Hemant Sriram Patil is a Shiv Sena politician from Nanded district, Marathwada. He is a member of the 17th Lok Sabha from Hingoli constituency.
+                    <a class="" target="_blank" href="">Read More</a></p>
+                </div>
+            </div>
+
+            <div class="mp-card">
+                <img src="image/MP/img2.png" alt="">
+                <div class="mp-body">
+                    <h3>Prataprao Jadhav</h3>
+                    <div class="seperator"></div>
+                    <p class="justify">Prataprao Ganpatrao Jadhav is an Indian politician. He represents the Buldhana Buldhana constituency of Maharashtra state and is a member of the Shiv Sena.
+                    <a class="" target="_blank" href="">Read More</a></p>
+                </div>
+            </div>
+
+            <div class="mp-card">
+                <img src="image/MP/img3.png" alt="">
+                <div class="mp-body">
+                    <h3>Krupal Tumane</h3>
+                    <div class="seperator"></div>
+                    <p class="justify">Krupal Balaji Tumane is an Indian politician from Nagpur who is re-elected in 17th Lok Sabha & was member of the 16th Lok Sabha of India.
+                    <a class="" target="_blank" href="">Read More</a></p>
+                </div>
+            </div>
+
+            <div class="mp-card">
+                <img src="image/MP/img4.png" alt="">
+                <div class="mp-body">
+                    <h3>Bhavana Gawali</h3>
+                    <div class="seperator"></div>
+                    <p class="justify">Bhavana Gawali is a five timer Member of Parliament representing Yavatmal-Washim Lok Sabha. She is serving as a Member of Parliament.
+                    <a class="" target="_blank" href="">Read More</a></p>
+                </div>
+            </div>
+
+            <div class="mp-card">
+                <img src="image/MP/img5.png" alt="">
+                <div class="mp-body">
+                    <h3>Shrirang Barne</h3>
+                    <div class="seperator"></div>
+                    <p class="justify">Shrirang Chandu Barne is Shiv Sena politician from Chinchwad, Pune, India. He was the member of the 16th Lok Sabha of India and Re-Elected for 17th Lok Sabha of India.
+                    <a class="" target="_blank" href="">Read More</a></p>
+                </div>
+            </div>
+
+            <div class="mp-card">
+                <img src="image/MP/img6.jpg" alt="">
+                <div class="mp-body">
+                    <h3>Sanjay Mandlik</h3>
+                    <div class="seperator"></div>
+                    <p class="justify">Sanjay Sadashivrao Mandlik is an Indian politician and a Shiv Sena leader from Kolhapur district, Maharashtra. He is member of 17th Lok Sabha from Kolhapur Constituency.
+                    <a class="" target="_blank" href="">Read More</a></p>
+                </div>
+            </div>
+
+            <div class="mp-card">
+                <img src="image/MP/img7.png" alt="">
+                <div class="mp-body">
+                    <h3>Dhairyasheel Mane</h3>
+                    <div class="seperator"></div>
+                    <p class="justify">Dhairyasheel Sambhajirao Mane is an Indian politician. He is elected to the Lok Sabha, lower house of the Parliament of India from Hatkanangale, Maharashtra.
+                    <a class="" target="_blank" href="">Read More</a></p>
+                </div>
+            </div>
+
+            <div class="mp-card">
+                <img src="image/MP/img8.png" alt="">
+                <div class="mp-body">
+                    <h3>Sadashiv Lokhande</h3>
+                    <div class="seperator"></div>
+                    <p class="justify">Sadashiv Kisan Lokhande is a member of the 17th Lok Sabha of India. He represents the Shirdi constituency of Maharashtra and is a member of the Shiv Sena.
+                    <a class="" target="_blank" href="">Read More</a></p>
+                </div>
+            </div>
+
+            <div class="mp-card">
+                <img src="image/MP/img9.png" alt="">
+                <div class="mp-body">
+                    <h3>Hemant Godse</h3>
+                    <div class="seperator"></div>
+                    <p class="justify">Hemant Tukaram Godse is a member of the 17th Lok Sabha of India. He represents Nashik constituency of Maharashtra and is a member of the Shiv Sena.
+                    <a class="" target="_blank" href="">Read More</a></p>
+                </div>
+            </div>
+
+            <div class="mp-card">
+                <img src="image/MP/img10.png" alt="">
+                <div class="mp-body">
+                    <h3>Rajendra Gavit</h3>
+                    <div class="seperator"></div>
+                    <p class="justify">Rajendra Dhedya Gavit is an Indian politician and Shiv Sena politician. He is member of the 17th Lok Sabha from Palghar. He was the tribal development minister in the Congress-NCP alliance government. 
+                    <a class="" target="_blank" href="">Read More</a></p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <!-- Mp card End  -->
 
     <!-- Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 </body>
 
