--- a/form.html
+++ b/form.html
@@ -95,7 +95,7 @@
                       <a class="nav-link" href="contact.html">Contact us</a>
                   </li>
                   <li class="nav-item">
-                      <a class="btn" href="form.html">Join Shivsena</a>
+                      <a class="btn disabled" href="form.html">Join Shivsena</a>
                   </li>
                   <li class="nav-item">
                       <a class="btn" href="donation.html">Make a Donation</a>
