--- a/PressReleases.html
+++ b/PressReleases.html
@@ -43,15 +43,15 @@
                             <a class="dropdown-item" href="">Mission</a>
                         </div>
                     </li>
-                    <li class="nav-item dropdown">
+                    <li class="nav-item dropdown active">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Media
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="PressReleases.html">Press Releases</a>
-                            <a class="dropdown-item" href="photogallery.html">Photo Gallery</a>
-                            <a class="dropdown-item" href="media.html">Video Gallery</a>
+                            <a class="dropdown-item disabled" href="photogallery.html">Photo Gallery</a>
+                            <a class="dropdown-item disabled" href="media.html">Video Gallery</a>
                         </div>
                     </li>
                     <div class="nav-item dropdown">
