--- a/contact.html
+++ b/contact.html
@@ -108,7 +108,7 @@
                       </div>
                   </div>
                   <li class="nav-item">
-                      <a class="nav-link" href="contact.html">Contact us</a>
+                      <a class="nav-link active" href="contact.html">Contact us</a>
                   </li>
                   <li class="nav-item">
                       <a class="btn" href="form.html">Join Shivsena</a>
