--- a/donation.html
+++ b/donation.html
@@ -94,7 +94,7 @@
                       <a class="btn" href="form.html">Join Shivsena</a>
                   </li>
                   <li class="nav-item">
-                      <a class="btn" href="donation.html">Make a Donation</a>
+                      <a class="btn disabled" href="donation.html">Make a Donation</a>
                   </li>
               </ul>
           </div>
