--- a/media.html
+++ b/media.html
@@ -46,14 +46,14 @@
                           <a class="dropdown-item" href="">Mission</a>
                       </div>
                   </li>
-                  <li class="nav-item dropdown">
+                  <li class="nav-item dropdown active">
                       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           Media
                       </a>
                       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <a class="dropdown-item" href="PressReleases.html">Press Releases</a>
-                          <a class="dropdown-item" href="photogallery.html">Photo Gallery</a>
+                          <a class="dropdown-item disabled" href="PressReleases.html">Press Releases</a>
+                          <a class="dropdown-item disabled" href="photogallery.html">Photo Gallery</a>
                           <a class="dropdown-item" href="media.html">Video Gallery</a>
                       </div>
                   </li>
@@ -344,7 +344,7 @@
               </div>
           </div>
       </div>
-  </footer>
+    </footer>
   <!-- Footer End -->
 
   <script src="JavaScript/slide.js"></script>
