--- a/ministers.html
+++ b/ministers.html
@@ -57,15 +57,15 @@
                         </div>
                     </li>
                     <div class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Party
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="">President</a>
+                            <a class="dropdown-item disabled" href="">President</a>
                             <a class="dropdown-item" href="ministers.html">Ministers</a>
                             <li>
-                                <a class="dropdown-item" href="">Leadership &raquo;</a>
+                                <a class="dropdown-item disabled" href="">Leadership &raquo;</a>
                                 <ul class="dropdown-menu dropdown-submenu">
                                     <li><a class="dropdown-item" href="eknathshinde.html">Eknath Shinde Ji (C.M.)</a>
                                     </li>
@@ -78,13 +78,13 @@
                                     <li><a class="dropdown-item" href="anshuman.html">Anshuman Joshi Ji</a></li>
                                 </ul>
                             </li>
-                            <a class="dropdown-item" href="ourmp.html">MP</a>
-                            <a class="dropdown-item" href="mla.html">MLA</a>
+                            <a class="dropdown-item disabled" href="ourmp.html">MP</a>
+                            <a class="dropdown-item disabled" href="mla.html">MLA</a>
                             <li>
-                                <a class="dropdown-item" href="">About Shivsena &raquo;</a>
+                                <a class="dropdown-item disabled" href="">About Shivsena &raquo;</a>
                                 <ul class="dropdown-menu dropdown-submenu">
-                                    <li><a class="dropdown-item" href="https://rb.gy/5glkd">History</a></li>
-                                    <li><a class="dropdown-item" href="ideology.html">Ideology</a></li>
+                                    <li><a class="dropdown-item disabled" href="https://rb.gy/5glkd">History</a></li>
+                                    <li><a class="dropdown-item disabled" href="ideology.html">Ideology</a></li>
 
                             </li>
                         </div>
