--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
 
             <div class="ideal-responsive">
                 <div class="card">
-                    <a class="ideal-img" target="_blank" href="https://rb.gy/am3k8"><img src="image/veersavarkar.jpg"
+                    <a class="ideal-img" target="_blank" href="https://rb.gy/am3k8"><img src="image/VeerSavarkar.jpg"
                             alt="veersavarkar"></a>
                     <div class="card-body">
                         <h5 class="card-title">Veer Savarkar</h5>
